# referral-system-api

./: .env  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: api.py  celery_app.py  config.py  email.py  exceptions.py  main.py  models.py  security.py
app/auth/: google_auth.py  models.py  service.py  tasks.py  utils.py  views.py
app/database/: core.py
app/jwt/: models.py
app/referral/: models.py  utils.py  views.py
app/referrals/: models.py  service.py  views.py
migrations/: env.py
migrations/versions/: 2024-10-15_a94170676f49.py  2024-10-15_dffb6c7b5fb2.py  2024-10-17_c2ba5bf12020.py
tests/: conftest.py
tests/integration/: test_auth_routes.py  test_google_auth_routes.py  test_referrals_routes.py
tests/unit/auth/: test_models.py
tests/unit/database/: test_core.py
tests/unit/referrals/: test_utils.py
